--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="bck_ground">#E0E0E0</color>
+
+    <color name="last_date_month_1">#FA8181</color>
+    <color name="last_date_month_2">#B43030</color>
+
+
+
 </resources>
