update main ui and habit item btn

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="last_date_month_1">#FA8181</color>
     <color name="last_date_month_2">#B43030</color>
 
-
+    <color name="back_bottom_nav">#443B3B</color>
 
 </resources>
