--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,11 +65,41 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
         
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="@dimen/_70sdp"
+            android:orientation="horizontal"
             android:background="@drawable/bck_carlendar_horiz">
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:orientation="vertical"
+            android:background="@drawable/bck_habit">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center"
+                android:text="Habbit"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"/>
+
+        </LinearLayout>
+
+
+
+
 
     </LinearLayout>
 </layout>
