--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,23 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.android.mobile_project.ui.activity.main.MainViewModel" />
+
+        <variable
+            name="a"
+            type="com.android.mobile_project.ui.activity.main.MainActivity" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/bck_ground">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/frg_contain"
+            android:id="@+id/frag_contain"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -22,8 +31,10 @@
             android:background="@color/bck_ground"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/btm_nav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/bottom_nav"
             android:background="@drawable/bck_bottom"
