update input activity

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,78 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+    <data>
 
-        <ImageView
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height= "@dimen/_150sdp"
-            android:layout_marginStart="@dimen/_3sdp"
-            android:layout_marginTop="@dimen/_50sdp"
-            android:src="@drawable/ic_activity_input_tree"/>
+        <variable
+            name="vm"
+            type="com.android.mobile_project.ui.activity.input.InputViewModel" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Habit Tracker"
-            android:textStyle="bold"
-            android:textSize="@dimen/_20ssp"/>
+        <variable
+            name="a"
+            type="com.android.mobile_project.ui.activity.input.InputActivity" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_60sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="@drawable/bck_habit_name"
-            android:hint="Habit name"
-            android:maxLength="20"
-            android:gravity="center"/>
-
-
-    </LinearLayout>
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btn_next"
-        android:layout_width="@dimen/_50sdp"
-        android:layout_height="@dimen/_50sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_5sdp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <ImageView
-            android:id="@+id/bck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_50sdp"
+                android:src="@drawable/ic_activity_input_tree" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Habit Tracker"
+                android:textStyle="bold"
+                android:textSize="@dimen/_20ssp" />
+
+            <EditText
+                android:id="@+id/edt_input_user"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_60sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/bck_habit_name"
+                android:hint="Habit name"
+                android:maxLength="20"
+                android:gravity="center" />
+
+
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btn_next"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/bck_circle_white_btn"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:onClick="onClick">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/btn_next"
-            app:layout_constraintEnd_toEndOf="@+id/btn_next"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
-            app:layout_constraintStart_toStartOf="@+id/btn_next"
-            android:src="@drawable/ic_arrow_next"/>
+            <ImageView
+                android:id="@+id/bck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@drawable/bck_circle_white_btn" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/btn_next"
+                app:layout_constraintEnd_toEndOf="@+id/btn_next"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_next"
+                app:layout_constraintStart_toStartOf="@+id/btn_next"
+                android:src="@drawable/ic_arrow_next" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
