--- a/app/src/main/res/layout/layout_ver_calendar.xml
+++ b/app/src/main/res/layout/layout_ver_calendar.xml
@@ -1,130 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_width="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="S"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:gravity="center">
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="S"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="M"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="M"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="T"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="T"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="W"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="W"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="T"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="T"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="F"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
-        <ImageView
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/line_ver_car"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="F"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="S"
-            android:textStyle="bold"
-            android:textColor="#5A5858"
-            android:textAlignment="center"
-            android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line_ver_car" />
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="S"
+                android:textStyle="bold"
+                android:textColor="#5A5858"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/calendarRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp" />
 
     </LinearLayout>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/calendarRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"/>
-
 </LinearLayout>
