--- a/app/src/main/res/layout/layout_ver_calendar.xml
+++ b/app/src/main/res/layout/layout_ver_calendar.xml
@@ -123,7 +123,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/calendarRecyclerView"
+            android:id="@+id/rcv_calendar_ver"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="25dp"
