update create activity code

--- a/app/src/main/res/layout/activity_habit_setting.xml
+++ b/app/src/main/res/layout/activity_habit_setting.xml
@@ -172,7 +172,7 @@
                         android:text="t"/>
 
                     <Button
-                        android:id="@+id/web_date"
+                        android:id="@+id/wed_date"
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:background="@drawable/bck_cir_date"
